# Fireplace-Hacknarok2024

./: .gitignore  README.md  main.py  plot.py  pyproject.toml  requirements.txt  run.py
app/: forms.py  models.py  routes.py
app/backend/: fireplaces.py  rooms.py
app/blueprints/: api.py  auth.py
app/static/css/: base.css  fireplace.css  fireplacemaster.css  join.css  login.css  ranking.css  register.css
app/static/js/: fireplace.js  fireplacemaster.js  host.js  host_handler.js  join.js  login.js  loginfromregister.js  logout.js  register.js  socket_handler.js  stats.js  uppdate_handler.js  user_handler.js
app/templates/: base.html  fireplace.html  fireplacemaster.html  join.html  login.html  ranking.html  register.html
