[tool.poetry]
name = "hacknarok"
version = "0.1.0"
description = "tbh creatures hackathon project"
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.2"
flask-login = "^0.6.3"
flask-wtf = "^1.2.1"
wtforms = "^3.1.2"
flask-sqlalchemy = "^3.1.1"
flask-socketio = "^5.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
